2.34.0
======
July 1, 2021
- Add new DSLs to support invoking system processes with quoted strings and other special cases
  - I execute system process "<process>" delmited by "<delimiter>"
  - I execute a unix system process "<process>" delmited by "<delimiter>"
  - <attribute> <is|will be> defined by system process "<expression>" delmited by "<delimiter>"
- Support passing DocStrings as parameters to StepDefs (addresses issue gwen-interpreter/gwen#60)
- Update scala from v2.13.3 to v2.13.6

2.33.0
======
June 22, 2021
- Report portal integration release
- Add `nodePath` and `sourceRef` options to `gwen.rp.testCaseId.keys` setting to support
  generating test case ID's based on node path or source reference only.
June 7, 2021 - 2.33.0-rc-rp.2
- Fix name clash between parameters and attributes in interpolator
- Convert back slashes in sourceRef and nodePath to forward slashes on Windows
- Send sourceRef as item attribute in report portal if it is less than or equal to 128 
  characeters in length, otherwise append it to the item description instead.
- Enforce case sensitivity on all report portal setting names.
- Improved test case ID generation for nodePath+params mode:
  - Remove all keywords from node paths and use node names only
  - Remove table cooridnates and `Examples` keyword from expanded scenario names in outlines
  - Use single dimension occurrence in node path of ForEach, While, and Until iterations
  - Pass cumulative parameters to report portal 
    - Incuding current parameters and all those previously visible in the call chain
- Remove node path logging on node descriptions
- Introduce new setting `gwen.rp.debug=true|false` to control whether or not
  to log debug messages containing the node path and parameters for all nodes
  in report portal. Default is false.
May 31, 2021 - 2.33.0-rc-rp.1
- Fix duplicate launch histories in RP for scenario outlines